tests/error/array_oob_multi.gw
#! [contains] ArrayOutofBounds
var Object i[1][1];
i[1][0];
